[project]
name = "ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "aio-pika>=9.6.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "fastapi>=0.135.1",
    "orjson>=3.11.7",
    "sqlalchemy>=2.0.47",
    "uuid6>=2025.0.1",
    "uvicorn>=0.41.0",
]
